# levana-predict

./: .env  .gitignore  LICENSE  README.md  justfile
.ci/: commit-check.awk  contracts.sh  make-source-tarball.sh
.github/workflows/: committer_check.yml  contracts.yaml  frontend.yml
contract/: Cargo.toml  TODO.md
contract/src/: api.rs  constants.rs  cpmm.rs  error.rs  execute.rs  instantiate.rs  lib.rs  migrate.rs  prelude.rs  query.rs  sanity.rs  state.rs  tests.rs  types.rs  util.rs
docs/: selling-withdrawing-collateral.md
frontend/: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/.helix/: languages.toml
frontend/public/: manifest.json
frontend/src/: app.tsx  main.tsx
frontend/src/api/: querier.ts  utils.ts
frontend/src/api/mutations/: BuyLiquidity.ts  CancelBet.ts  ClaimEarnings.ts  PlaceBet.ts  ProvideLiquidity.ts
frontend/src/api/queries/: Balances.ts  Geoblock.ts  GlobalInfo.ts  Market.ts  NtrnBalance.ts  NtrnPrice.ts  Positions.ts  Prices.ts
frontend/src/assets/brand/: LevanaIcon.tsx  LevanaLogo.tsx  LevanaName.tsx  PredictLogo.tsx  PredictName.tsx
frontend/src/assets/icons/: Alert.tsx  (+13 more)
frontend/src/config/: chain.tsx  environment.ts  notifications.tsx  queries.tsx  router.tsx  theme.tsx
frontend/src/state/: modals.tsx  timestamps.tsx
frontend/src/utils/: analytics.ts  coins.ts  encoding.ts  errors.ts  forms.ts  hooks.ts  number.ts  shares.ts  string.ts  styles.ts  time.ts  tokens.ts
util/predict-analysis/: Cargo.toml
util/predict-analysis/src/: main.rs  types.rs
(+57 files in other folders)
