[package]
name = "levana-predict"
version = "0.1.0"
authors = ["Levana Team"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = "1.5.4"
cw2 = "1.1.2"
cw-storage-plus = "1.2.0"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false, features = ["derive"] }
thiserror = "1.0.58"
strum = "0.26.2"
strum_macros = "0.26.2"
semver = "1.0.23"

[dev-dependencies]
cosmwasm-schema = "1.5.0"
cw-multi-test = "0.20.0"
proptest = "1.5.0"
